ComponentInfo/build_output.txt
=== 开始构建 ComponentInfo 插件 ===
>>> 编译源代码...
[ 12%] Compiling resources...
[ 12%] Built target AddOnResources
[ 37%] Building CXX object CMakeFiles/AddOn.dir/Src/ComponentInfoMain.cpp.o
[ 37%] Building CXX object CMakeFiles/AddOn.dir/Src/ComponentInfo.cpp.o
[ 50%] Building CXX object CMakeFiles/AddOn.dir/Src/ComponentInfoPalette.cpp.o
/Users/yt-mac/Nutstore Files/日常笔记/日常笔记/002科研题目/AI/02HBIM/HBIM2/ComponentInfo/Src/ComponentInfoPalette.cpp:760:24: error: expected ';' after expression
  760 |                         DG::InformationAlert alert (warningMessage, "确定");
      |                                             ^
      |                                             ;
/Users/yt-mac/Nutstore Files/日常笔记/日常笔记/002科研题目/AI/02HBIM/HBIM2/ComponentInfo/Src/ComponentInfo.cpp:577:57: error: no member named 'typeID' in 'API_Elem_Head'
  577 |                 GS::UniString* typeNamePtr = typeNames.Get (elemHead.typeID);
      |                                                             ~~~~~~~~ ^
/Users/yt-mac/Nutstore Files/日常笔记/日常笔记/002科研题目/AI/02HBIM/HBIM2/ComponentInfo/Src/ComponentInfoPalette.cpp:760:25: error: use of undeclared identifier 'alert'
  760 |                         DG::InformationAlert alert (warningMessage, "确定");
      |                                              ^
/Users/yt-mac/Nutstore Files/日常笔记/日常笔记/002科研题目/AI/02HBIM/HBIM2/ComponentInfo/Src/ComponentInfoPalette.cpp:761:4: error: use of undeclared identifier 'alert'
  761 |                         alert.Invoke ();
      |                         ^
1 error generated.
make[2]: *** [CMakeFiles/AddOn.dir/Src/ComponentInfo.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
3 errors generated.
make[2]: *** [CMakeFiles/AddOn.dir/Src/ComponentInfoPalette.cpp.o] Error 1
make[1]: *** [CMakeFiles/AddOn.dir/all] Error 2
make: *** [all] Error 2
